--- a/streamingpro-spark-2_2_0-adaptor/pom.xml
+++ b/streamingpro-spark-2_2_0-adaptor/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>streamingpro-spark-2.2.0-adaptor</artifactId>
+    <artifactId>streamingpro-spark-2_2_0-adaptor</artifactId>
     <dependencies>
         <dependency>
             <groupId>streaming.king</groupId>
